--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="lionels-projects-9a7d8f2a/v0-retro-game-website" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Retro Games</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
